# sura-rag

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md
examples/: 01_quickstart.py  02_langchain_integration.py  03_llamaindex_integration.py  04_audit_and_certificates.py
sura_rag/: __init__.py  cli.py  client.py  config.py  exceptions.py  models.py
sura_rag/adapters/: __init__.py  base.py  chroma.py  faiss.py  qdrant.py
sura_rag/audit/: __init__.py  certificate.py  logger.py  schema.py
sura_rag/connectors/: __init__.py  langchain.py  llamaindex.py
sura_rag/engines/: __init__.py  forget_engine.py  guardrail.py  leak_prober.py
sura_rag/guardrails/: __init__.py  fallback.py  hard_block.py  soft_block.py  warn_log.py
sura_rag/llms/: __init__.py  base.py  hf.py  ollama.py
sura_rag/probes/: __init__.py  adversarial.py  base.py  contextual.py  direct.py  paraphrase.py
tests/: conftest.py
tests/fixtures/: mock_ollama.py  sample_docs.py
tests/integration/: test_full_forget_pipeline.py  test_langchain_connector.py
tests/unit/: test_audit_logger.py  test_certificate.py  test_chroma_adapter.py  test_forget_engine.py  test_guardrail.py  test_leak_prober.py  test_models.py
